# rdma4py

./: .lintrunner.toml  .pyre_configuration  BENCHMARKS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-lint.txt
.github/workflows/: docs.yml  lint.yml  publish-efa.yml  publish.yml  publish_efa.yml  publish_nvmeof.yml  test.yml  wheels.yml
benchmarks/: plot_results.py
docs/: Makefile  conf.py  index.md  requirements.txt
docs/_static/: custom.css
docs/efa/: api.rst  examples.md  index.md
docs/ibverbs/: api.rst  examples.md  index.md
docs/nvmeof/: api.rst  examples.md  index.md
docs/superpowers/plans/: 2026-07-16-ibverbs-python-bindings.md
docs/superpowers/specs/: 2026-07-16-ibverbs-python-bindings-design.md
efa/: .gitignore  BENCHMARKS.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
efa/benchmarks/: efa_gpu_to_gpu.py
efa/src/efa/: __init__.py  _efa.pyx  _libefa.pxd  _version.py  cuda.py  enums.py  helpers.py
efa/tests/: _srd.py  conftest.py  test_ah.py  test_cq.py  test_cuda_helpers.py  test_device.py  test_enums.py  test_gpudirect.py  test_helpers.py  test_import.py  test_loopback.py  test_pd_mr.py  test_qp.py  test_two_device.py
ibverbs/: .gitignore  BENCHMARKS.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
ibverbs/benchmarks/: gpudirect.py
ibverbs/src/ibverbs/: __init__.py  _ibverbs.pyx  _librdmacm.pxd  _libverbs.pxd  _mlx5dv_bridge.h  cuda.py  enums.py  helpers.py
ibverbs/src/ibverbs/gpunetio/: __init__.py  _build.py  _device.cu  _runtime.py  cutedsl.py  triton.py
ibverbs/tests/: _cuda.py  _rc.py  conftest.py  test_cm.py  test_comp_channel.py  test_cq.py  test_cuda_helpers.py  test_device.py  test_enums.py  test_gpudirect.py  test_gpunetio.py  test_helpers.py  test_import.py  test_loopback.py  test_pd_mr.py  test_qp.py  test_two_device.py
nvmeof/: BENCHMARKS.md  README.md  pyproject.toml
nvmeof/benchmarks/: gpudirect.py
nvmeof/src/nvmeof/: __init__.py  controller.py  protocol.py  rdma.py
nvmeof/tests/: test_integration.py  test_namespace.py  test_protocol.py  test_queue.py
tools/linter/adapters/: pip_init.py  pyre_linter.py  ruff_linter.py  ufmt_linter.py
