[build-system]
requires = ["setuptools>=77", "Cython>=3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efa"
dynamic = ["version"]
description = "Low-level Pythonic bindings for AWS EFA (SRD RDMA via libibverbs/libefa), with GPUDirect support"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Tristan Rice" }]
keywords = ["efa", "srd", "rdma", "ibverbs", "aws", "gpudirect", "networking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
# No runtime dependencies: the library only needs libibverbs + libefa at load time.
dependencies = []

[tool.setuptools.dynamic]
version = { attr = "efa._version.__version__" }

[project.optional-dependencies]
test = ["pytest>=7", "numpy"]
gpu = ["torch"]

[project.urls]
Documentation = "https://d4l3k.github.io/rdma4py/efa/"
Homepage = "https://github.com/d4l3k/rdma4py"
Repository = "https://github.com/d4l3k/rdma4py"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: exercises real EFA hardware (loopback / two-NIC)",
    "gpu: requires a CUDA GPU and torch (GPUDirect)",
]
testpaths = ["tests"]

# Single abi3 wheel per platform (works on CPython 3.9+). The extension is
# built against rdma-core headers but dlopens libibverbs/libefa at runtime, so
# the build image only needs the -devel headers; the wheel has no external
# NEEDED library and is trivially manylinux-compliant.
[tool.cibuildwheel]
# cibuildwheel selects a CPython build environment; setup.py retags the
# resulting extension as cp39-abi3 via Py_LIMITED_API.
build = "cp39-*"
build-frontend = "build"
skip = ["*-musllinux*"]
test-requires = ["pytest", "numpy"]
# Hardware/GPU tests self-skip when no EFA NIC/CUDA is present in CI.
test-command = "pytest -rs -m 'not gpu' {package}/tests"

[tool.cibuildwheel.linux]
# manylinux images are AlmaLinux-based (dnf/yum).
before-all = "dnf install -y rdma-core-devel || yum install -y rdma-core-devel"
