[build-system]
requires = ["setuptools>=64", "Cython>=3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibverbs"
version = "0.1.0"
description = "Low-level Pythonic bindings for libibverbs (RDMA), with GPUDirect support"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Tristan Rice" }]
keywords = ["rdma", "ibverbs", "infiniband", "roce", "gpudirect", "networking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
# No runtime dependencies: the library only needs libibverbs at load time.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7", "numpy"]
gpu = ["torch"]

[project.urls]
Homepage = "https://github.com/tristanr/rdma4py"
Repository = "https://github.com/tristanr/rdma4py"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: exercises real RDMA hardware (loopback / two-NIC)",
    "gpu: requires a CUDA GPU and torch (GPUDirect)",
]
testpaths = ["tests"]

# Single abi3 wheel per platform (works on CPython 3.9+). The extension is
# built against rdma-core headers but dlopens libibverbs at runtime, so the
# build image only needs the -devel headers; the wheel has no external NEEDED
# library and is trivially manylinux-compliant.
[tool.cibuildwheel]
build = "cp39-abi3"
build-frontend = "build"
skip = ["*-musllinux*"]
test-requires = ["pytest", "numpy"]
# Hardware/GPU tests self-skip when no NIC/CUDA is present in CI.
test-command = "pytest -rs -m 'not gpu' {project}/tests"

[tool.cibuildwheel.linux]
# manylinux images are AlmaLinux-based (dnf/yum).
before-all = "dnf install -y rdma-core-devel || yum install -y rdma-core-devel"
